welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: type mismatch;
 found   : Boolean
 required: String
while (Msg!==""){
          ^